--- a/README
+++ b/README
@@ -1,1 +1,16 @@
 MyElectronics/work directory backup/repository
+
+[00] System cabinet for 19" racks.
+
+[10] 19" rack for measurements.
+- [11] Power Supply Unit.
+- [12] LED meter.
+- [13] Digital meter.
+
+[20] 19" rack.
+- [21] Power Supply Unit.
+
+[30] 19" rack for generators.
+- [31] Power Supply Unit.
+- [32] Noise Generator.
+- [33] Pulse Generator.
