--- a/README
+++ b/README
@@ -9,8 +9,27 @@ MyElectronics/work directory backup/repository
 
 [20] 19" rack.
 - [21] Power Supply Unit.
+- [22] .
+- [23] .
+- [24] .
+- [25] .
+- [26] Octave Filter.
 
 [30] 19" rack for generators.
 - [31] Power Supply Unit.
 - [32] Noise Generator.
 - [33] Pulse Generator.
+- [34] Burst Generator.
+
+[40] 19" rack for generators.
+- [41] Power Supply Unit.
+- [42] .
+- [43] Pre Amplifier.
+- [44] Amplifier.
+
+[50] 19"rack for VLF Oscilloscope.
+- [51] Power Supply Unit.
+- [52] Input Channel X.
+- [53] Input Channel Y.
+- [54] Control Unit.
+- [55] Output.
